{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 13,
  "lineage": "0b7244b7-3d22-2c6d-cbc5-b2276a15eb1a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aur_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07eef52105e8a2059",
            "arn": "arn:aws:ec2:eu-central-1:977099024553:instance/i-07397145db9122436",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07397145db9122436",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nixssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01de4b899e8f6fc9a",
            "private_dns": "ip-10-0-0-131.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.131",
            "public_dns": "ec2-3-127-57-4.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.57.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05815eebd62be4bc9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03293b7e10df386a3",
            "tags": {
              "Name": "aur-web-instance"
            },
            "tags_all": {
              "Name": "aur-web-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fdf836875dc4507b"
            ]
          },
          "dependencies": [
            "aws_security_group.aur_sg",
            "aws_subnet.aur_public_1",
            "aws_vpc.aur_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aur_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:977099024553:internet-gateway/igw-0f0ffe5e15469e7cc",
            "id": "igw-0f0ffe5e15469e7cc",
            "owner_id": "977099024553",
            "tags": {
              "Name": "aur-igw"
            },
            "tags_all": {
              "Name": "aur-igw"
            },
            "vpc_id": "vpc-0737a506c6538046f"
          },
          "dependencies": [
            "aws_vpc.aur_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "aur_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f0ffe5e15469e7cc",
            "id": "r-rtb-05bad71b7225365081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05bad71b722536508",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aur_igw",
            "aws_route_table.aur_rt",
            "aws_vpc.aur_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aur_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:977099024553:route-table/rtb-05bad71b722536508",
            "id": "rtb-05bad71b722536508",
            "owner_id": "977099024553",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aur-public-route-table"
            },
            "tags_all": {
              "Name": "aur-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0737a506c6538046f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aur_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aur_public_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a2beb93a35eeba4",
            "route_table_id": "rtb-05bad71b722536508",
            "subnet_id": "subnet-03293b7e10df386a3"
          },
          "dependencies": [
            "aws_route_table.aur_rt",
            "aws_subnet.aur_public_1",
            "aws_vpc.aur_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aur_public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ad06174434848c9",
            "route_table_id": "rtb-05bad71b722536508",
            "subnet_id": "subnet-0a9bac4df91cd4587"
          },
          "dependencies": [
            "aws_route_table.aur_rt",
            "aws_subnet.aur_public_2",
            "aws_vpc.aur_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aur_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:977099024553:security-group/sg-0fdf836875dc4507b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdf836875dc4507b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250315102643102300000002",
            "name_prefix": "terraform-",
            "owner_id": "977099024553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aur-sg"
            },
            "tags_all": {
              "Name": "aur-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0737a506c6538046f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aur_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aur_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:977099024553:subnet/subnet-01a101351f16eada0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.253.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a101351f16eada0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "977099024553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aur-private-subnet-1"
            },
            "tags_all": {
              "Name": "aur-private-subnet-1"
            },
            "vpc_id": "vpc-0737a506c6538046f"
          },
          "dependencies": [
            "aws_vpc.aur_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aur_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:977099024553:subnet/subnet-0ac2b47e7da1cc56b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.254.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac2b47e7da1cc56b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "977099024553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aur-private-subnet-2"
            },
            "tags_all": {
              "Name": "aur-private-subnet-2"
            },
            "vpc_id": "vpc-0737a506c6538046f"
          },
          "dependencies": [
            "aws_vpc.aur_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aur_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:977099024553:subnet/subnet-03293b7e10df386a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03293b7e10df386a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "977099024553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aur-public-subnet-1"
            },
            "tags_all": {
              "Name": "aur-public-subnet-1"
            },
            "vpc_id": "vpc-0737a506c6538046f"
          },
          "dependencies": [
            "aws_vpc.aur_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aur_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:977099024553:subnet/subnet-0a9bac4df91cd4587",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9bac4df91cd4587",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "977099024553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aur-public-subnet-2"
            },
            "tags_all": {
              "Name": "aur-public-subnet-2"
            },
            "vpc_id": "vpc-0737a506c6538046f"
          },
          "dependencies": [
            "aws_vpc.aur_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aur_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:977099024553:vpc/vpc-0737a506c6538046f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-026daf6712cc2f10c",
            "default_route_table_id": "rtb-0618d08b2318c5606",
            "default_security_group_id": "sg-07ba23950c80e1063",
            "dhcp_options_id": "dopt-0211c97ab6ea633cd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0737a506c6538046f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0618d08b2318c5606",
            "owner_id": "977099024553",
            "tags": {
              "Name": "aur-vpc"
            },
            "tags_all": {
              "Name": "aur-vpc"
            }
          }
        }
      ]
    }
  ]
}